<resources>
    <string name="app_name">My Cart</string>
    <string name="search">search</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="product_image">Product image</string>
    <string name="add_item">add item</string>
    <string name="cart_title">My Cart</string>
    <string name="sum_price">Total</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="mycart">My Cart</string>
    <string name="shoppingcart">shoppingCart</string>
</resources>