<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    app:cardCornerRadius="6dp">



                <ImageView
                    android:id="@+id/imgItemCart"
                    android:contentDescription ="@string/product_image"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:src="@drawable/baseline_android_24"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    />
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginEnd="5dp">
                    <TextView
                        android:id="@+id/tvCartName"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:text="@string/name"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/tvCartPrice"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/price"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textSize="11sp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="120dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp">

                    <ImageButton
                        android:contentDescription="@string/add_item"
                        android:id="@+id/btnAdd"
                        android:layout_width="25dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_add_box_24"
                        />

                    <TextView
                        android:id="@+id/tvQuantity"
                        android:layout_width="23dp"
                        android:layout_height="60dp"
                        android:text="@string/quantity"
                        app:layout_constraintEnd_toStartOf="@id/tvSumPrice"
                        android:gravity="center"
                        />

                    <ImageButton
                        android:contentDescription= "delete item"
                        android:id="@+id/btnDelete"
                        android:layout_width="25dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_indeterminate_check_box_24"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/tvSumPrice"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/price"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textSize="13sp"
                        android:gravity="center"

                        />
                </LinearLayout>















</LinearLayout>